@@ -39,7 +39,6 @@ date_default_timezone_set($_SESSION[$guid]["timezone"]);
 
 $URL=$_SESSION[$guid]["absoluteURL"] . "/index.php?q=/modules/Help Desk/issues_manage_technicians.php" ;
 
-// TEMP FIX (FIX IT!!!)
 if (isActionAccessible($guid, $connection2, "/modules/Help Desk/issues_manage_technicians.php")==FALSE) {
   //Fail 0
   $URL=$URL . "&addReturn=fail0" ;
